# PDFChatbot

./: .gitignore  README.md  config.py  init_db.py  main.py  main_api.py  pyproject.toml
backend/: __init__.py  document_manager.py  routes.py  schemas.py
chroma_db/: chroma.sqlite3
chroma_db/8bf0d366-44bd-4e2f-a348-47a9817f0e04/: index_metadata.pickle
frontend/: index.html
generation/: __init__.py  generator.py  pipeline.py
ingestion_pipeline/: __init__.py  loader.py  pdf_ingest.py  vector_db.py
retriever/: __init__.py  hybrid_retriever.py  query_expansion.py  reranker.py
