[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.5",
    "cssselect>=1.4.0",
    "ebooklib>=0.20",
    "fastapi>=0.104.1",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "html2text>=2025.4.15",
    "htmldate>=1.9.4",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "lxml>=6.0.2",
    "markdown>=3.10.2",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "unidecode>=1.4.0",
    "uvicorn>=0.24.0",
    "xhtml2pdf>=0.2.17",
]
